// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`best=0, worst=0 matches snapshot 1`] = `
<DocumentFragment>
  <main>
    <h1>
      Question 1
    </h1>
    <p
      id="scenarioText"
    >
      You have recently taken a call from a customer praising the helpful service offered by a colleague in your team. Do you:
    </p>
    <hr />
    <div
      class="answer-option"
      id="answerOptionA"
    >
      <button
        aria-label="Option A is best"
        class="answer-button best-button"
        id="bestOptA"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option A"
        class="option-text"
        id="optTextA"
      >
        Tell your colleague about the feedback on a one-to-one basis.
      </span>
      <button
        aria-label="Option A is worst"
        class="answer-button worst-button"
        id="worstOptA"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionB"
    >
      <button
        aria-label="Option B is best"
        class="answer-button best-button"
        id="bestOptB"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option B"
        class="option-text"
        id="optTextB"
      >
        Inform your team leader and let them give the praise personally.
      </span>
      <button
        aria-label="Option B is worst"
        class="answer-button worst-button"
        id="worstOptB"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionC"
    >
      <button
        aria-label="Option C is best"
        class="answer-button best-button"
        id="bestOptC"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option C"
        class="option-text"
        id="optTextC"
      >
        Wait until the team meeting tomorrow and announce the feedback to everyone.
      </span>
      <button
        aria-label="Option C is worst"
        class="answer-button worst-button"
        id="worstOptC"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionD"
    >
      <button
        aria-label="Option D is best"
        class="answer-button best-button"
        id="bestOptD"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option D"
        class="option-text"
        id="optTextD"
      >
        Email the whole company so that everyone hears about the great feedback.
      </span>
      <button
        aria-label="Option D is worst"
        class="answer-button worst-button"
        id="worstOptd"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <button
      type="submit"
    >
      Submit
    </button>
  </main>
</DocumentFragment>
`;

exports[`best=1, worst=2 matches snapshot 1`] = `
<DocumentFragment>
  <main>
    <h1>
      Question 1
    </h1>
    <p
      id="scenarioText"
    >
      You have recently taken a call from a customer praising the helpful service offered by a colleague in your team. Do you:
    </p>
    <hr />
    <div
      class="answer-option"
      id="answerOptionA"
    >
      <button
        aria-label="Option A is best"
        class="answer-button best-button"
        id="bestOptA"
        style="background-color: white;"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option A"
        class="option-text"
        id="optTextA"
      >
        Tell your colleague about the feedback on a one-to-one basis.
      </span>
      <button
        aria-label="Option A is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptA"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionB"
    >
      <button
        aria-label="Option B is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptB"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option B"
        class="option-text"
        id="optTextB"
      >
        Inform your team leader and let them give the praise personally.
      </span>
      <button
        aria-label="Option B is worst"
        class="answer-button worst-button"
        id="worstOptB"
        style="background-color: white;"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionC"
    >
      <button
        aria-label="Option C is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptC"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option C"
        class="option-text"
        id="optTextC"
      >
        Wait until the team meeting tomorrow and announce the feedback to everyone.
      </span>
      <button
        aria-label="Option C is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptC"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionD"
    >
      <button
        aria-label="Option D is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptD"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option D"
        class="option-text"
        id="optTextD"
      >
        Email the whole company so that everyone hears about the great feedback.
      </span>
      <button
        aria-label="Option D is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptd"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <button
      type="submit"
    >
      Submit
    </button>
  </main>
</DocumentFragment>
`;

exports[`best=3, worst=4 matches snapshot 1`] = `
<DocumentFragment>
  <main>
    <h1>
      Question 1
    </h1>
    <p
      id="scenarioText"
    >
      You have recently taken a call from a customer praising the helpful service offered by a colleague in your team. Do you:
    </p>
    <hr />
    <div
      class="answer-option"
      id="answerOptionA"
    >
      <button
        aria-label="Option A is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptA"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option A"
        class="option-text"
        id="optTextA"
      >
        Tell your colleague about the feedback on a one-to-one basis.
      </span>
      <button
        aria-label="Option A is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptA"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionB"
    >
      <button
        aria-label="Option B is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptB"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option B"
        class="option-text"
        id="optTextB"
      >
        Inform your team leader and let them give the praise personally.
      </span>
      <button
        aria-label="Option B is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptB"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionC"
    >
      <button
        aria-label="Option C is best"
        class="answer-button best-button"
        id="bestOptC"
        style="background-color: white;"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option C"
        class="option-text"
        id="optTextC"
      >
        Wait until the team meeting tomorrow and announce the feedback to everyone.
      </span>
      <button
        aria-label="Option C is worst"
        class="answer-button button-disabled"
        disabled=""
        id="worstOptC"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <div
      class="answer-option"
      id="answerOptionD"
    >
      <button
        aria-label="Option D is best"
        class="answer-button button-disabled"
        disabled=""
        id="bestOptD"
        type="button"
      >
        Best
      </button>
      <span
        aria-label="Option D"
        class="option-text"
        id="optTextD"
      >
        Email the whole company so that everyone hears about the great feedback.
      </span>
      <button
        aria-label="Option D is worst"
        class="answer-button worst-button"
        id="worstOptd"
        style="background-color: white;"
        type="button"
      >
        Worst
      </button>
    </div>
    <hr />
    <button
      type="submit"
    >
      Submit
    </button>
  </main>
</DocumentFragment>
`;
